# python-project-template

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pytemplate/: runner.py
pytemplate/utils/: nlp_utils.py
scripts/: run.py
